Fixing the strange non-clickable issue by removing the overlapping react logo

--- a/client/utranscript/src/App.css
+++ b/client/utranscript/src/App.css
@@ -3,15 +3,8 @@
   padding: 10px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
 .App-header {
-  height: 15vh;
-  display: flex;
-  flex-direction: column;
+  display: block;
   align-items: center;
   justify-content: center;
 }
@@ -30,11 +23,3 @@
   color: black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
